cmake_minimum_required(VERSION 3.9)
project(Alien_Kart_Race)

set(CMAKE_CXX_STANDARD 11)

add_executable(Alien_Kart_Race
        prebuildtools/AIPathGenerator/aipathgenerator.cc
        prebuildtools/MapBinder/mapbinder.cc
        prebuildtools/MapSectorsGenerator/mapsectorsgenerator.cc
        prebuildtools/MapTilesetGenerator/maptilesetgenerator.cc
        prebuildtools/MinimapGenerator/minimapgenerator.cc
        src/config/config.h
        src/entity/base/mapentity.h
        src/entity/base/mapmovingentity.h
        src/entity/kart/aikart/base/aikart.cc
        src/entity/kart/aikart/base/aikart.h
        src/entity/kart/aikart/impl/venusian/aivenusian.cc
        src/entity/kart/aikart/impl/venusian/aivenusian.h
        src/entity/kart/base/kart.cc
        src/entity/kart/base/kart.h
        src/entity/kart/kartfactory/kartfactory.cc
        src/entity/kart/kartfactory/kartfactory.h
        src/entity/kart/playerkart/base/playerkart.cc
        src/entity/kart/playerkart/base/playerkart.h
        src/entity/kart/playerkart/impl/venusian/playervenusian.cc
        src/entity/kart/playerkart/impl/venusian/playervenusian.h
        src/font/fontfactory.cc
        src/font/fontfactory.h
        src/game/game.cc
        src/game/game.h
        src/gametimer/gametimer.h
        src/keyboard/listener/keyboardlistener.h
        src/keyboard/manager/keyboardmanager.cc
        src/keyboard/manager/keyboardmanager.h
        src/launcher/launcher.cc
        src/launcher/launcher.h
        src/leaderboard/leaderboard.cc
        src/leaderboard/leaderboard.h
        src/level/level.cc
        src/level/level.h
        src/levelpicker/levelpicker.cc
        src/levelpicker/levelpicker.h
        src/log/logger/logger.h
        src/log/loggerinterface/loggerinterface.h
        src/main/main.cc
        src/map/base/map.cc
        src/map/base/map.h
        src/map/impl/earth/earth.cc
        src/map/impl/earth/earth.h
        src/map/mapfactory/mapfactory.cc
        src/map/mapfactory/mapfactory.h
        src/minimap/minimap.cc
        src/minimap/minimap.h
        src/screen/base/screen.cc
        src/screen/base/screen.h
        src/screen/fade/fadescreen.cc
        src/screen/fade/fadescreen.h
        src/screen/manager/screenmanager.cc
        src/screen/manager/screenmanager.h
        src/util/file/fileutil.h
        src/util/geometry/geometryentities.cc
        src/util/geometry/geometryentities.h
        src/util/geometry/geometryutil.cc
        src/util/geometry/geometryutil.h
        src/util/math/mathentities.h
        src/util/math/mathtutil.cc
        src/util/math/mathutil.h
        src/util/matrix/matrixutil.h
        src/util/perspective/perspectiveutil.cc
        src/util/perspective/perspectiveutil.h
        src/util/resources/resourceutil.cc
        src/util/resources/resourceutil.h
        src/util/sfml/sfmlutil.cc
        src/util/sfml/sfmlutil.h
        src/util/stdutil/stdutil.h
        src/util/timeutil/timeutil.cc
        src/util/timeutil/timeutil.h
        src/util/view/viewutil.cc
        src/util/view/viewutil.h
        Doxyfile
        Makefile
        README.MD)
